# da-concept

./: Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: elgamal.rs  encryption.rs  errors.rs  keypair.rs  lib.rs  types.rs
da-node/: .env  Cargo.toml  build.rs
da-node/configs/: local.toml  local2.toml
da-node/db/: node.sqlite  node2.sqlite
da-node/migrations/: 20250403103200_init.up.sql  20250403110719_users.down.sql  20250403110719_users.up.sql  20250403110723_blobs.down.sql  20250403110723_blobs.up.sql  20250403111120_sync_status.down.sql  20250403111120_sync_status.up.sql
da-node/proto/: sync.proto
da-node/src/: configuration.rs  errors.rs  logger.rs  main.rs  startup.rs
da-node/src/node_api/: client.rs  config.rs  mod.rs  server.rs  sync.rs
da-node/src/user_api/: context.rs  data_loader.rs  mod.rs  types.rs
