[package]
name = "da-node"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.9"
dotenvy = "0.15.7"
clap = { version = "4.5.29", features = ["derive", "env"] }

argon2 = "0.5.3"

serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "sqlite", "chrono", "uuid"] }

jsonwebtoken = "9.3.1"
axum = { version = "0.8", features = ["http1", "json", "query", "tracing", "ws"], default-features = false }
juniper = { version = "0.16.1", features = ["chrono", "uuid"] }
juniper_axum = { version = "0.2.0", features = ["subscriptions"] }

tonic = "0.12.3"
prost = "0.13.5"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }

base64 = "0.22.1"

anyhow = "1.0.97"
thiserror = "2.0.12"

dataloader = "0.18.0"
tokio-stream = "0.1.17"

sha2 = "0.10.8"
ring = "0.17.14"
crypto = { path = "../crypto" }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
rand = "0.9.0"
fake = "4.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
claims = "0.8.0"
reqwest = "0.12.13"
